fix(Inline component containers): Fixes an overflow issue of the containers that are used for inline components.
This will be moved to a generic InlineContainer (or similar) soon to allow label/buttons to be used in the same context

--- a/src/components/badge/BadgeGroup.css
+++ b/src/components/badge/BadgeGroup.css
@@ -4,6 +4,10 @@
   --cmp-badge-spacing: calc(var(--spacing-grid-size) * 2);
 }
 
+.ax-badge-group__container {
+  overflow: hidden;
+}
+
 .ax-badge-group {
   margin-bottom: calc(var(--cmp-badge-spacing) * -1);
 
